# Rect

./: .gitignore  CMakeLists.txt  Doxyfile.in  README.MD  README.md  Rect.cpp  Rect.h
.github/: copilot-instructions.md
cmake/: RectConfig.cmake.in
include/Rect/: Rect.h
test/: CMakeLists.txt  RectTests.cpp
